[gd_scene load_steps=2 format=3 uid="uid://bii87hhh2y7xn"]

[ext_resource type="Script" path="res://Scenes/StateMachine Manage/States/Boss states/b_attack.gd" id="1_pkbcb"]

[node name="Battack" type="Node2D"]
script = ExtResource("1_pkbcb")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.375
one_shot = true

[node name="Ready2atk" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Ready2atk" to="." method="_on_ready_2_atk_timeout"]
